[gd_scene load_steps=15 format=2]

[ext_resource path="res://script/resultadodemedicao/resultadodemedicaotscn.gd" type="Script" id=1]
[ext_resource path="res://imagem/fundos/fundo_branco.png" type="Texture" id=2]
[ext_resource path="res://script/resultadodemedicao/button3.gd" type="Script" id=3]
[ext_resource path="res://script/resultadodemedicao/button2.gd" type="Script" id=4]
[ext_resource path="res://icone/voltar.png" type="Texture" id=5]
[ext_resource path="res://icone/menu.png" type="Texture" id=6]
[ext_resource path="res://fontes/new_dynamicfont.tres" type="DynamicFont" id=7]
[ext_resource path="res://temas/tema_exemplo.tres" type="Theme" id=8]
[ext_resource path="res://temas/botoes_de_funcaobasica.tres" type="Theme" id=9]
[ext_resource path="res://imagem/fundos/mini_logo.png" type="Texture" id=10]
[ext_resource path="res://temas/lineedit.tres" type="Theme" id=11]
[ext_resource path="res://temas/arial_negrito.tres" type="DynamicFont" id=12]
[ext_resource path="res://temas/tema_button_azulmarinho.tres" type="Theme" id=13]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0.156863, 1, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.356863, 0.419608, 0.588235, 1 )
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[node name="resultadodemedicao" type="Node2D"]
script = ExtResource( 1 )

[node name="fundobranco" type="Sprite" parent="."]
position = Vector2( 655, 391 )
scale = Vector2( 1.21403, 1.18685 )
texture = ExtResource( 2 )

[node name="num_readings_edit" type="LineEdit" parent="."]
margin_left = 20.0
margin_top = 114.0
margin_right = 449.0
margin_bottom = 164.0
theme = ExtResource( 13 )
text = "INSIRA O NÚMERO DE LEITURAS"
align = 1

[node name="lineeditreso" type="LineEdit" parent="."]
margin_left = 473.0
margin_top = 112.0
margin_right = 798.0
margin_bottom = 246.0
theme = ExtResource( 11 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 7 )
text = "INSERIR A RESOLUÇÃO"
align = 1

[node name="label" type="Label" parent="."]
margin_left = 721.0
margin_top = 285.0
margin_right = 921.0
margin_bottom = 375.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 12 )

[node name="label2" type="Label" parent="."]
margin_left = 721.0
margin_top = 335.0
margin_right = 921.0
margin_bottom = 425.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 12 )
align = 1

[node name="label3" type="Label" parent="."]
margin_left = 721.0
margin_top = 385.0
margin_right = 921.0
margin_bottom = 475.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 12 )
align = 1

[node name="button2" type="Button" parent="."]
margin_right = 71.0
margin_bottom = 71.0
theme = ExtResource( 9 )
icon = ExtResource( 6 )
icon_align = 1
script = ExtResource( 4 )

[node name="button3" type="Button" parent="."]
margin_left = 86.0
margin_top = -1.0
margin_right = 157.0
margin_bottom = 70.0
theme = ExtResource( 9 )
icon = ExtResource( 5 )
icon_align = 1
script = ExtResource( 3 )

[node name="button4" type="Button" parent="."]
margin_left = 869.0
margin_top = 188.0
margin_right = 959.0
margin_bottom = 238.0
theme = ExtResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "90%"

[node name="button5" type="Button" parent="."]
margin_left = 979.0
margin_top = 188.0
margin_right = 1069.0
margin_bottom = 238.0
theme = ExtResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "95%"

[node name="button6" type="Button" parent="."]
margin_left = 1097.0
margin_top = 188.0
margin_right = 1187.0
margin_bottom = 238.0
theme = ExtResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "99%"

[node name="label4" type="Label" parent="."]
margin_left = 721.0
margin_top = 485.0
margin_right = 1001.0
margin_bottom = 631.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 12 )

[node name="label5" type="Label" parent="."]
margin_left = 721.0
margin_top = 435.0
margin_right = 967.0
margin_bottom = 539.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 12 )

[node name="resultadoslabel" type="Label" parent="."]
margin_left = 721.0
margin_top = 485.0
margin_right = 977.0
margin_bottom = 583.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 12 )

[node name="create_inputs_button" type="Button" parent="."]
margin_left = 20.0
margin_top = 190.0
margin_right = 449.0
margin_bottom = 240.0
theme = ExtResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 7 )
text = "INSERIR AS LEITURAS"

[node name="inputs_container" type="VBoxContainer" parent="."]
margin_left = 55.0
margin_top = 259.0
margin_right = 399.0
margin_bottom = 701.0
theme = ExtResource( 11 )

[node name="label6" type="Label" parent="."]
margin_left = 820.0
margin_top = 114.0
margin_right = 1249.0
margin_bottom = 173.0
custom_fonts/font = ExtResource( 12 )
custom_styles/normal = SubResource( 1 )
text = "SELECIONE A CONFIABILIDADE 
DESEJADA"
align = 1

[node name="MiniLogo" type="Sprite" parent="."]
position = Vector2( 1190, 678 )
texture = ExtResource( 10 )

[connection signal="focus_entered" from="num_readings_edit" to="." method="_on_num_readings_edit_focus_entered"]
[connection signal="focus_entered" from="lineeditreso" to="." method="_on_lineeditreso_focus_entered"]
[connection signal="button_up" from="button2" to="button2" method="_on_button2_button_up"]
[connection signal="button_up" from="button3" to="button3" method="_on_button3_button_up"]
